crates/walrus-codegen/snapshots/float_less.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define {} @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret {} zeroinitializer
}

declare i32 @putchar(i32)

define i1 @main(i8* %main.env) {
main.entry:
  %x.alloca = alloca float, align 4
  store float 1.000000e+00, float* %x.alloca, align 4
  %y.alloca = alloca float, align 4
  store float 1.000000e+00, float* %y.alloca, align 4
  %x = load float, float* %x.alloca, align 4
  %y = load float, float* %y.alloca, align 4
  %0 = fcmp olt float %x, %y
  ret i1 %0
}

