crates/walrus-codegen/snapshots/float_plus.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define float @main() {
main.entry:
  ret float 1.000000e+00
}

