crates/walrus-codegen/snapshots/if_then_else_false.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define i32 @main() {
main.entry:
  br i1 false, label %if.then, label %if.else

if.then:                                          ; preds = %main.entry
  br label %if.end

if.else:                                          ; preds = %main.entry
  br label %if.end

if.end:                                           ; preds = %if.else, %if.then
  %if.merge = phi i32 [ 1, %if.then ], [ 0, %if.else ]
  ret i32 %if.merge
}

